# rPPG

./: .gitignore  .mailmap  LICENSE  LICENSE-rPPG-Toolbox  pyproject.toml  rPPG.yml  readme.md
rPPG/: demo.py  guiDemo.py
rPPG/baselines/: CHROM.py  POS.py  README.md  baselinesPreprocess.py  calcBaselines.py  cvtSignal.py  readme.md
rPPG/bboxes/: bboxesMp.py  formatBBoxes.py  readme.md
rPPG/bboxes/annotator/: Makefile  annotator.conf  configure  makeCrop.py  readme.md
rPPG/bboxes/annotator/src/: annotator.cc  labeller.cc  labeller.h  playback.cc  playback.h  settings.cc  settings.h  ui.cc  ui.h
rPPG/crop/: crop.py  readme.md
rPPG/models/Flex/: DDPM-6.model  MSPM-6.model  readme.md
rPPG/postprocess/: annotateVideo.py  calcHR.py  cka.py  plotCKA.py  plotFFT.py  plotWaveform.py  readme.md  scatter.py  spectralAnalysis.py  visualizeModel.py
rPPG/predict/: predict.py  readme.md
rPPG/train/: exampleConfig.json  exampleSplits.json  plotLosses.py  readme.md  test.py  train.py
rPPG/utils/: PhysFormer.py  TSCAN.py  annotateVideo.py  applyMasksVideo.py  augmentations.py  bboxUtils.py  combineWaves.py  config.py  cvtData.py  dataloader.py  envelope.py  evaluate.py  genSplits.py  getBestModel.py  hr.py  litemodels.py  losses.py  masks.py  masksSpotcheck.py  mediapipe.py  mergeMasks.py  metadata.py  modelExecutor.py  modelLoader.py  models.py  npio.py  printTimestamps.py  speedtest.py  tables.py  timestamps2masks.py  vidcap.py
rPPG/utils/altDatasets/: BP4D.py  MMSE-HR.py  PURE.py  UBFC-rPPG.py
